Added details pages for all three resources

--- a/libraryapp/templates/libraries/list.html
+++ b/libraryapp/templates/libraries/list.html
@@ -11,7 +11,7 @@
     <ol>
     {% for library in all_libraries %}
         <li>
-            {{ library.title }}
+            <a href="{% url 'libraryapp:library' library.id %}"> {{ library.title }}</a>
             {{library.address}}
         </li>
     {% endfor %}
